--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ future:      true
 lsi:         false
 pygments:    true
 markdown:    maruku
-permalink:   date
+permalink:   pretty
 
 maruku:
   use_tex:    false
@@ -22,3 +22,12 @@ maruku:
 
 rdiscount:
   extensions: []
+  
+
+
+# Change the dir the individual tag files are output to
+tag_dir: tag # Default is tags
+# Title to be used when generating the individual tag html files prefixed with tag name
+tag_title_prefix: "Tags &raquo; "
+# enable related_tags computing
+related_tags: true
